Scaffolded pages, added base styles, login form built

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,22 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://use.fontawesome.com/3d79d2831f.js"></script>
+
+   <!--<link href="./styles/please-wait.css" rel="stylesheet">-->
+    <!--<link href="assets/css/default.css" rel="stylesheet">-->
 </head>
 <body>
   <app-root>Loading...</app-root>
+   <!--<script type="text/javascript" src="./scripts/please-wait.min.js"></script>
+
+  <script type="text/javascript">
+    window.loading_screen = window.pleaseWait({
+       logo: "assets/opengive-logo-white.bee31fa4.svg",
+      backgroundColor: '#f6625e',
+      loadingHtml: "<p class='loading-message'>A good day to you fine user!</p>"
+    });
+  </script>-->
 </body>
 </html>
