--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,20 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://use.fontawesome.com/3d79d2831f.js"></script>
 
-   <!--<link href="./styles/please-wait.css" rel="stylesheet">-->
-    <!--<link href="assets/css/default.css" rel="stylesheet">-->
 </head>
 <body>
-  <app-root>Loading...</app-root>
-   <!--<script type="text/javascript" src="./scripts/please-wait.min.js"></script>
+   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/please-wait/0.0.5/please-wait.min.js"></script>
+  <app-root>
+    <!--Loading Screen: closed by window.loading_screen.finish() in app.component.ts-->
+    <script *ngIf= type="text/javascript">
+      window.loading_screen = window.pleaseWait({
+        logo: "assets/opengive-logo-white.bee31fa4.svg",
+        backgroundColor: '#f6625e',
+        loadingHtml: "<div class='spinner'><div class='rect1'></div><div class='rect2'></div><div class='rect3'></div><div class='rect4'></div><div class='rect5'></div></div>"
+      });
+    </script>
+  </app-root>
 
-  <script type="text/javascript">
-    window.loading_screen = window.pleaseWait({
-       logo: "assets/opengive-logo-white.bee31fa4.svg",
-      backgroundColor: '#f6625e',
-      loadingHtml: "<p class='loading-message'>A good day to you fine user!</p>"
-    });
-  </script>-->
+ 
 </body>
 </html>
