Added responsive layout sidenav

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,14 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://use.fontawesome.com/3d79d2831f.js"></script>
 
+
 </head>
 <body>
    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/please-wait/0.0.5/please-wait.min.js"></script>
+  
   <app-root>
-    <!--Loading Screen: closed by window.loading_screen.finish() in app.component.ts-->
-    <script *ngIf= type="text/javascript">
+    
+    <script type="text/javascript">
       window.loading_screen = window.pleaseWait({
         logo: "assets/opengive-logo-white.bee31fa4.svg",
         backgroundColor: '#f6625e',
